--- a/features/detail/build.gradle
+++ b/features/detail/build.gradle
@@ -36,6 +36,8 @@ android {
 
 dependencies {
     implementation project(':dagger.addons')
+    implementation project(':features:database')
+
     implementation "androidx.appcompat:appcompat:$rootProject.supportLibraryVersion"
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayout"
     implementation 'org.jetbrains.kotlin:kotlin-reflect:1.2.60'
@@ -57,6 +59,10 @@ dependencies {
     implementation "com.google.dagger:dagger-android:$rootProject.dagger"
     implementation("com.google.dagger:dagger-android-support:$rootProject.dagger")
     kapt "com.google.dagger:dagger-android-processor:$rootProject.dagger"
+
+    //room
+    implementation "androidx.room:room-runtime:$rootProject.room"
+    kapt "androidx.room:room-compiler:$rootProject.room"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
