--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.3.50'
+
     ext {
-        androidPluginVersion = '3.2.1'
+        androidPluginVersion = '3.5.1'
         //sdk and tools
         compileSdkVersion = 28
         minSdkVersion = 21
         targetSdkVersion = 28
 
         //dependencies
-        kotlin = '1.2.60'
+        kotlin = '1.3.41'
         supportLibraryVersion = '1.0.0'
         constraintLayout = '1.1.2'
         retrofit = '2.4.0'
-        lifecycle = '2.0.0'
+        lifecycle = '2.1.0'
         gson = '2.8.2'
         dagger = '2.16'
         glide = '4.8.0'
