--- a/features/detail/build.gradle
+++ b/features/detail/build.gradle
@@ -36,9 +36,10 @@ android {
 
 dependencies {
     implementation project(':dagger.addons')
+    implementation project(':storage')
     implementation "androidx.appcompat:appcompat:$rootProject.supportLibraryVersion"
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayout"
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.2.60'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.41'
 
     //glide
     implementation "com.github.bumptech.glide:glide:$rootProject.glide"
