--- a/android_commons.gradle
+++ b/android_commons.gradle
@@ -31,7 +31,8 @@ android {
         }
         debugProguard {
             initWith buildTypes.debug
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'),
+                    'proguard-rules.pro'
             minifyEnabled true
         }
     }
