--- a/core/build.gradle
+++ b/core/build.gradle
@@ -26,14 +26,19 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation project(':features:detail')
+    implementation project(':features:favorites')
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$rootProject.kotlin"
+    implementation 'androidx.core:core-ktx:1.0.0'
+    implementation "androidx.appcompat:appcompat:$rootProject.supportLibraryVersion"
 
 
     //room
     implementation 'androidx.room:room-runtime:2.2.5'
     kapt 'androidx.room:room-compiler:2.2.5'
+
+
 
     //dagger
     implementation "com.google.dagger:dagger:$rootProject.dagger"
