--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:$androidPluginVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin"
 
+        classpath 'com.squareup.sqldelight:gradle-plugin:1.4.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
