--- a/features/favorites/build.gradle
+++ b/features/favorites/build.gradle
@@ -28,6 +28,7 @@ android {
 
 dependencies {
     implementation project(':dagger.addons')
+    implementation project(':features:common')
     implementation "androidx.appcompat:appcompat:$rootProject.supportLibraryVersion"
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayout"
     implementation 'org.jetbrains.kotlin:kotlin-reflect:1.2.60'
@@ -53,4 +54,8 @@ dependencies {
     kapt "androidx.room:room-compiler:$rootProject.room"
     implementation "androidx.room:room-runtime:$rootProject.room"
     implementation "androidx.room:room-rxjava2:$rootProject.room"
+
+    //glide
+    implementation "com.github.bumptech.glide:glide:$rootProject.glide"
+    kapt "com.github.bumptech.glide:compiler:$rootProject.glide"
 }
