--- a/features/list/src/main/AndroidManifest.xml
+++ b/features/list/src/main/AndroidManifest.xml
@@ -4,9 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <application android:usesCleartextTraffic="true">
-        <activity
-            android:name="com.vp.list.MovieListActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize">
+        <activity android:name="com.vp.list.MovieListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
