--- a/features/list/build.gradle
+++ b/features/list/build.gradle
@@ -21,6 +21,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             minifyEnabled true
         }
+
     }
 
     compileOptions {
@@ -33,7 +34,7 @@ dependencies {
     implementation project(':dagger.addons')
     implementation project(path: ':features:detail')
 
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.2.60'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$rootProject.kotlin"
     //glide
     implementation "com.github.bumptech.glide:glide:$rootProject.glide"
     kapt "com.github.bumptech.glide:compiler:$rootProject.glide"
