--- a/features/list/build.gradle
+++ b/features/list/build.gradle
@@ -65,7 +65,9 @@ dependencies {
     //test
     testImplementation 'org.assertj:assertj-core:3.17.2'
     testImplementation 'junit:junit:4.13.1'
-    testImplementation "org.mockito:mockito-core:3.0.0"
+    testImplementation "org.mockito:mockito-core:3.5.15"
+    // needed to mock kotlin final classes
+    testImplementation 'org.mockito:mockito-inline:3.5.15'
     testImplementation "com.squareup.retrofit2:retrofit-mock:$rootProject.retrofit"
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
     androidTestImplementation 'androidx.test:runner:1.3.0'
