--- a/features/detail/build.gradle
+++ b/features/detail/build.gradle
@@ -35,10 +35,15 @@ android {
 }
 
 dependencies {
+    implementation project(':features:database')
     implementation project(':dagger.addons')
     implementation "androidx.appcompat:appcompat:$rootProject.supportLibraryVersion"
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayout"
     implementation 'org.jetbrains.kotlin:kotlin-reflect:1.2.60'
+
+    //db
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     //glide
     implementation "com.github.bumptech.glide:glide:$rootProject.glide"
